--- a/khmoney/src/main/resources/static/css/content.css
+++ b/khmoney/src/main/resources/static/css/content.css
@@ -371,11 +371,11 @@ input{outline:0;}
 .tasks_wrap{display:block;}
 .tasks_wrap .main_menu{position:absolute;top:50%;display:block;width:100%;margin:-100px 0 0 -25px;padding:0;text-align:center;}
 .tasks_wrap .main_menu ul{display:table;margin:0 auto;}
-.tasks_wrap .main_menu ul li{float:left;width:150px;border:2px solid #0C51F4;margin:7px;border-radius:50%;}
-.tasks_wrap .main_menu ul li:hover{border:2px solid #0C51F4;background-color:#0C51F4;}
+.tasks_wrap .main_menu ul li{float:left;width:150px;/* border:2px solid #0C51F4; */margin:7px;border-radius:50%;}
+/* .tasks_wrap .main_menu ul li:hover{border:2px solid #0C51F4;background-color:#0C51F4;} */
 .tasks_wrap .main_menu ul li a{display:block;height:150px;font-size:18px;font-family:"Khmer OS Muol","Khmer OS Bokor", "Khmer OS Content", "Khmer OS Battambang", "Khmer OS Siemreap", "Khmer OS System";color:#3598db;line-height:150px;}
 .tasks_wrap .main_menu ul li a > span{display:inline-block;line-height:25px;vertical-align:middle;}
-.tasks_wrap .main_menu ul li:hover a > span{color:#fff;}
+/* .tasks_wrap .main_menu ul li:hover a > span{color:#fff;} */
 
 .tbl_input_dot{display:block;padding:0 30px;}
 .tbl_input_dot tr th, .tbl_input_dot tr td{text-align:left;vertical-align:middle;} 
