--- a/khmoney/src/main/resources/templates/layouts/layout.html
+++ b/khmoney/src/main/resources/templates/layouts/layout.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorator="layouts/layout">
-<head >
-<meta charset="utf-8">
-</head>
-
-
-<body class="lnb_bg">
+<html   xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+    <head>
+		<title>Loan Money</title>
+		<meta charset="utf-8">
+		<meta http-equiv="Cache-Control" content="No-Cache">
+		<meta http-equiv="Pragma" content="No-Cache">
+		<meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+		<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+		<link rel="icon" th:href="@{../img/icon/loan.ico}">
+		<link rel="icon" th:href="@{img/icon/loan.ico}">
+		<link rel="stylesheet" th:href="@{/css/reset.css}">
+		<link rel="stylesheet" th:href="@{/css/content.css}">
+		<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}">
+   </head>
+   <body class="lnb_bg">
 
 <div class="wrap">
 
 	<!-- header -->
-	<!-- <div lang="en" th:replace="/header :: header_main"></div> -->
+	<div lang="en" th:replace="/header :: header_main"></div>
 	<!-- //header -->
-	<th:block layout:fragment="content">
+
 	<!-- Container -->
-	<div class="container">
+	<div class="container" layout:fragment="content">
 
 		<!-- content wrap -->
 		<div class="content">
-			<div class="cnt_wrap">
-			  	
+			<div class="cnt_wrap" >
 				<!-- title_wrap -->
 				<div class="tit_wrap cboth">
 					<div class="f_left">
@@ -79,16 +85,19 @@
 					</div>
 					<!-- //main_menu -->
 				</div>
-				
 			</div>
 		</div>
 		<!-- //content wrap -->
 	</div>
-	<!-- //Container -->
-	</th:block>
-	<!-- <div lang="en" th:replace="fragments/footer :: footer"> </div> -->
+	<!-- //Container -->	
+	<div lang="en" th:replace="fragments/footer :: footer"> </div>	
+</div>
 
-	
+<div lang="en" th:replace="fragments/assets :: assets"></div>
+<div layout:fragment="asset"></div>
+<!-- loading.... -->
+<div style="display:none;" id="loading">
+    <img th:src="@{../img/loading.gif}" alt="LAON" height="50" width="50">
 </div>
 </body>
 </html>
