--- a/khmoney/src/main/resources/templates/loaner.html
+++ b/khmoney/src/main/resources/templates/loaner.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org"
-	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head lang="en" th:replace="fragments/head :: head"></head>
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorator="layouts/layout">
+<head><meta charset="utf-8"></head>
 
 <body class="lnb_bg">
 
 <div class="wrap">
 
 	<!-- header -->
-	<div lang="en" th:replace="/header :: header_main"></div>
+	<!-- <div lang="en" th:replace="/header :: header_main"></div> -->
 	<!-- //header -->
-
+	<th:block layout:fragment="content">
 	<!-- Container -->
 	<div class="container">
 
@@ -135,18 +137,17 @@
 		<!-- //content wrap -->
 	</div>
 	<!-- //Container -->
-	
-	<div lang="en" th:replace="fragments/footer :: footer"> </div>
+	</th:block>
+	<!-- <div lang="en" th:replace="fragments/footer :: footer"> </div> -->
 
 	
 </div>
-     <script th:src="@{js/lib/jquery-1.8.3.min.js}"></script>
+<!--      <script th:src="@{js/lib/jquery-1.8.3.min.js}"></script>
      <script th:src="@{js/lib/jquery.bpopup.min.js}"></script>
 	 <script th:src="@{js/common/Common.js}"></script>
-	 <script th:src="@{js/common/pagination.js}"></script>
+	 <script th:src="@{js/common/pagination.js}"></script> -->
+	 <th:block layout:fragment="asset">
 	 <script th:src="@{js/loaner.js}"></script>
-	<div style="display:none;" id="loading">
-	    <img th:src="@{img/loading.gif}" alt="LAON" height="50" width="50">
-	</div>
+	 </th:block>
 </body>
 </html>
