--- a/khmoney/src/main/resources/templates/payment.html
+++ b/khmoney/src/main/resources/templates/payment.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org"
-	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="layouts/layout">
 <head lang="en" th:replace="fragments/head :: head"><meta charset="utf-8"></head>
 
 
@@ -11,7 +13,7 @@
 	<!-- header -->
 	<div lang="en" th:replace="/header :: header"></div>
 	<!-- //header -->
-
+	<th:block layout:fragment="content">
 	<!-- Container -->
 	<div class="container">
 
@@ -242,69 +244,61 @@
 		<!-- //content wrap -->
 	</div>
 	<!-- //Container -->
+	</th:block>	
 	<!-- footer -->
 	<div lang="en" th:replace="fragments/footer :: footer"> </div>
-	<!-- //footer -->
-   <input type="hidden" th:value="${loaner_id}" id="loaner_id"/>
-   <input type="hidden" th:value="${id}" id="id"/>
-   <input type="hidden" th:value="${loan_id}" id="loan_id"/>
-	
-</div>
-	<script th:src="@{../js/lib/jquery-1.8.3.min.js}"></script>
-	<script th:src="@{../js/lib/autoNumeric.min.js}"></script>
-	<script th:src="@{../js/lib/jquery.bpopup.min.js}"></script>
-	<script th:src="@{../js/lib/jquery-ui.min.js}"></script>
-	<script th:src="@{../js/lib/moment.min.js}"></script>
-	<script th:src="@{../js/common/Common.js}"></script>
-	<script th:src="@{../js/payment.js}"></script>
-<!-- popup form -->
-<div class="alert_wrap frm" style="display:none;" id="popu_alert_wrap">
-	<div class="alert_inner" style="width:520px important;">
-		<div class="alert_tit">
-			<h1>ពត័មានទឹកប្រាក់ដែលត្រូវបង់</h1>
-			<a href="javascript:" class="btn_close"><span class="blind">close</span></a>
+	<!-- //footer -->	
+	</div>
+	<th:block layout:fragment="asset">
+		<script th:src="@{../js/payment.js}"></script>
+		<input type="hidden" th:value="${loaner_id}" id="loaner_id"/>
+	  	<input type="hidden" th:value="${id}" id="id"/>
+	   	<input type="hidden" th:value="${loan_id}" id="loan_id"/>
+		<!-- popup form -->
+		<div class="alert_wrap frm" style="display:none;" id="popu_alert_wrap">
+			<div class="alert_inner" style="width:520px important;">
+				<div class="alert_tit">
+					<h1>ពត័មានទឹកប្រាក់ដែលត្រូវបង់</h1>
+					<a href="javascript:" class="btn_close"><span class="blind">close</span></a>
+				</div>
+				<div class="aler_cnt" style="height: auto !important;padding-bottom: 0px !important;">
+					<!-- table input popup -->
+					<div class="tbl_input_pop">
+						<table summary="">
+							<caption></caption>
+							<colgroup>
+							<col style="width:200px;">
+							<col>
+							</colgroup>
+							<tbody>
+							<!-- 	<tr>
+									<th><div>ប្រាក់ដើមត្រូវសង់</div></th>
+									<td><div><input type="text" value="" style="text-align: right" name="" id="popup_prak_derm" placeholder=""></div></td>
+								</tr>
+								<tr>
+									<th><div>ការប្រាក់សរុប</div></th>
+									<td><div><input type="text" value="" style="text-align: right" name="" id="popup_rate" placeholder=""></div></td>
+								</tr> -->
+								<tr>
+									<th><div>សរុបចំនួនទឹកប្រាក់</div></th>
+									<td><div><span style="text-align: right;font-size: 16px;font-weight: bold;" id="popup_total"></span><!-- <input type="text" value="" style="text-align: right" name="" id="popup_total" placeholder=""> -->
+										      <input type="hidden" id="payemnt_id_db"/>
+										     
+									</div></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<!-- //table input popup -->
+				</div>
+				<div class="t_line">
+					<a href="javascript:" class="btn_confirm" id="btn_update">រក្សាទុក</a>
+					<a href="javascript:" class="btn_cancel">បោះបង់</a>
+				</div>
+			</div>	
 		</div>
-		<div class="aler_cnt" style="height: auto !important;padding-bottom: 0px !important;">
-			<!-- table input popup -->
-			<div class="tbl_input_pop">
-				<table summary="">
-					<caption></caption>
-					<colgroup>
-					<col style="width:200px;">
-					<col>
-					</colgroup>
-					<tbody>
-					<!-- 	<tr>
-							<th><div>ប្រាក់ដើមត្រូវសង់</div></th>
-							<td><div><input type="text" value="" style="text-align: right" name="" id="popup_prak_derm" placeholder=""></div></td>
-						</tr>
-						<tr>
-							<th><div>ការប្រាក់សរុប</div></th>
-							<td><div><input type="text" value="" style="text-align: right" name="" id="popup_rate" placeholder=""></div></td>
-						</tr> -->
-						<tr>
-							<th><div>សរុបចំនួនទឹកប្រាក់</div></th>
-							<td><div><span style="text-align: right;font-size: 16px;font-weight: bold;" id="popup_total"></span><!-- <input type="text" value="" style="text-align: right" name="" id="popup_total" placeholder=""> -->
-								      <input type="hidden" id="payemnt_id_db"/>
-								     
-							</div></td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-			<!-- //table input popup -->
-		</div>
-		<div class="t_line">
-			<a href="javascript:" class="btn_confirm" id="btn_update">រក្សាទុក</a>
-			<a href="javascript:" class="btn_cancel">បោះបង់</a>
-		</div>
-	</div>	
-</div>
-<!-- //popup form -->
-<!-- loading.... -->
-<div style="display:none;" id="loading">
-    <img th:src="@{../img/loading.gif}" alt="LAON" height="50" width="50">
-</div>
+		<!-- //popup form -->
+	</th:block>
 </body>
 </html>
 
