--- a/khmoney/src/main/resources/templates/fragments/popup_loan.html
+++ b/khmoney/src/main/resources/templates/fragments/popup_loan.html
@@ -88,7 +88,18 @@
 					</colgroup>
 					<tbody>
 						<tr>
-							<th><div>បរិច្ឆេទទទួលប្រាក់</div></th>
+							<th><div>ភ្នាក់ងារ</div></th>
+							<td><div>
+									<select style="width:;" name="popup_agent" id="popup_agent">
+										<option>បង់ជា ថ្ងៃ</option>
+										<option>បង់ជា ១​ អាទិត្យ</option>
+										<option>បង់ជា ២ អាទិត្យ</option>
+										<option>បង់ជា​ ខែ</option>
+									</select>
+							</div></td>
+						</tr>
+						<tr>
+							<th><div>បរិច្ឆេទបើកប្រាក់</div></th>
 							<td><div><input type="text" value="" name="" placeholder="" readonly="readonly"​​ id="popup_start_date" style="width: 75%;margin-right:3px;"></div></td>
 						</tr>
 					</tbody>
