--- a/khmoney/src/main/resources/templates/loan-new.html
+++ b/khmoney/src/main/resources/templates/loan-new.html
@@ -241,6 +241,7 @@
 		<input type="hidden" id="type_payment_db">
 		<input type="hidden" id="end_date_db">
 		<input type="hidden" id="day_db">
+		<input type="hidden" id="agent"/>
 		<!-- popup form -->
 	    <div lang="en" th:replace="fragments/popup_loan :: popup_loan"></div>
 	</th:block>
