--- a/khmoney/src/main/resources/templates/index.html
+++ b/khmoney/src/main/resources/templates/index.html
@@ -50,11 +50,11 @@
 					<!-- main_menu -->
 					<div class="main_menu">
 						<ul>
-						    <li style="border:none !important;"><a th:href="@{/loaner}">
+						    <li style="border:none !important;"><a th:href="@{/mywallet}">
 								<img alt="loaner" th:src="@{img/logo/Status-wallet-open-icon.png}">
 								<span>ទឹកប្រាក់សរុប</span>
 							</a></li>
-							<li style="border:none !important;"><a th:href="@{/loaner}">
+							<li style="border:none !important;"><a th:href="@{/employee}">
 								<img alt="loaner" th:src="@{img/logo/User-2-icon.png}">
 								<span>អ្នកប្រើប្រាស់</span>
 							</a></li>
