--- a/khmoney/src/main/resources/templates/loan-again.html
+++ b/khmoney/src/main/resources/templates/loan-again.html
@@ -245,6 +245,7 @@
 		<input type="hidden" id="end_date_db">
 		<input type="hidden" id="day_db">
 		<input type="hidden" th:value="${loaner_id}" id="loaner_id"/>
+		<input type="hidden" id="agent"/>
 		<!-- popup form -->
 		 <div lang="en" th:replace="fragments/popup_loan :: popup_loan"></div>
 		<!-- //popup form -->		
