--- a/khmoney/src/main/resources/templates/mywallet.html
+++ b/khmoney/src/main/resources/templates/mywallet.html
@@ -53,7 +53,7 @@
 				<!-- //title_wrap -->
 				<!-- title_wrap -->
 				<div class="tit_wrap cboth mgt10">
-					<div class="t_left" >
+					<div class="t_left" id="totalAmount">
 						<div class="tit_h4" style="padding-bottom:10px !important;"><h4>សរុបទឹកប្រាក់</h4> 
 						<h1 style="margin-left:80px;"><b>1,000,000 រៀល</b></h1></div>
 					</div>
@@ -75,6 +75,7 @@
 						<col style="width:120px;">
 						<col style="width:100px;">
 						<col style="width:120px;">
+						<col style="width:100px;">
 						<col style="width:100px;">
 						<col >
 						</colgroup>
@@ -117,7 +118,7 @@
 				<div class="paging_wrap">
 					<div class="combo_wrap">
 						<div class="combo_style">
-							<select style="width:80px;height: 27px !important;" name="type_payment" id="num_rows">
+							<select style="width:80px;height: 27px !important;" name="num_rows" id="num_rows">
 								<option value="15">15</option>
 								<option value="30">30</option>
 								<option value="50">50</option>
