--- a/khmoney/src/main/resources/templates/fragments/popup_loan.html
+++ b/khmoney/src/main/resources/templates/fragments/popup_loan.html
@@ -4,6 +4,24 @@
         xmlns:th="http://www.thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <body>
+
+<!-- alert comfirm -->
+<div class="alert_wrap" style="display:none;" th:fragment="alert">
+	<div class="alert_inner">
+		<div class="alert_tit">
+			<h1>ពត័មាន</h1>
+			<a href="javascript:" class="btn_close"><span class="blind">close</span></a>
+		</div>
+		<div class="aler_cnt">
+			<p>ប្រតិបត្តិការរក្សាទុកទទួលបានជោគជ័យ</p>
+		</div>
+		<div class="t_line">
+			<a href="javascript:" class="btn_confirm">យល់ព្រម</a>
+		</div>
+	</div>	
+</div>
+
+
 <!-- popup form -->
 <div class="alert_wrap frm" style="display:none;" th:fragment="popup_loan">
 	<div class="alert_inner">
