--- a/khmoney/src/main/resources/templates/loan-new.html
+++ b/khmoney/src/main/resources/templates/loan-new.html
@@ -38,7 +38,7 @@
 				<!-- title_wrap -->
 				<div class="tit_wrap cboth">
 					<div class="t_center">
-						<div class="tit_h3"><h3>ពត៍មានលំអិតអំពីកម្ចីប្រាក់ម្ដងទៀត</h3>
+						<div class="tit_h3"><h3>ពត៍មានលំអិតអំពីកម្ចីប្រាក់ថ្មី</h3>
 						</div>
 					</div>
 					<!--<div class="f_right">
