--- a/khmoney/src/main/resources/templates/fragments/assets.html
+++ b/khmoney/src/main/resources/templates/fragments/assets.html
@@ -10,6 +10,8 @@
 	<script th:src="@{/js/lib/moment.min.js}"></script>
 	<script th:src="@{/js/common/Common.js}"></script>
 	<script th:src="@{/js/lib/jquery-ui.min.js}"></script>
+	<script th:src="@{/js/lib/jquery-confirm.min.js}"></script>
 	<script th:src="@{/js/common/pagination.js}"></script>
+	<script th:src="@{/js/common/Message.js}"></script>
  </div>
 </html>
