--- a/khmoney/src/main/resources/templates/fragments/head.html
+++ b/khmoney/src/main/resources/templates/fragments/head.html
@@ -8,11 +8,12 @@
 		<meta http-equiv="Cache-Control" content="No-Cache">
 		<meta http-equiv="Pragma" content="No-Cache">
 		<meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
-		<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
-		<link rel="icon" th:href="@{../img/icon/loan.ico}">
-		<link rel="icon" th:href="@{img/icon/loan.ico}">
+		<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>		
+		<link rel="icon"       th:href="@{img/icon/loan.ico}">
 		<link rel="stylesheet" th:href="@{/css/reset.css}">
 		<link rel="stylesheet" th:href="@{/css/content.css}">
 		<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}">
+		<link rel="stylesheet" th:href="@{/css/jquery-confirm.min.css}">
+		<link rel="stylesheet" th:href="@{/css/custom-message.css}">
    </head>
 </html>
