--- a/khmoney/src/main/resources/templates/fragments/popup_loan.html
+++ b/khmoney/src/main/resources/templates/fragments/popup_loan.html
@@ -6,11 +6,11 @@
 <body>
 
 <!-- alert comfirm -->
-<div class="alert_wrap" style="display:none;" th:fragment="alert">
+<div class="alert_wrap msg_alert_wrap" style="display:none;" th:fragment="alert">
 	<div class="alert_inner">
 		<div class="alert_tit">
 			<h1>ពត័មាន</h1>
-			<a href="javascript:" class="btn_close"><span class="blind">close</span></a>
+			<a href="javascript:" class="btn_close msg_btn_close"><span class="blind">close</span></a>
 		</div>
 		<div class="aler_cnt">
 			<p>ប្រតិបត្តិការរក្សាទុកទទួលបានជោគជ័យ</p>
