--- a/khmoney/src/main/resources/templates/login.html
+++ b/khmoney/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
     xmlns:th="http://www.thymeleaf.org" 
     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head lang="en" th:replace="fragments/head :: head"><meta charset="utf-8"/></head>
+<!-- <head lang="en" th:replace="fragments/head :: head"><meta charset="utf-8"/></head> -->
 
 
 <body class="lnb_bg">
@@ -11,11 +11,11 @@
 <div class="wrap">
 
 	<!-- header -->
-	<div class="header">
+	<!-- <div class="header">
 		<div class="f_left cboth">
 			<h1 class="logo"><a th:href="@{/}"><img th:src="@{../img/logo/piggy-bank.png}" alt="LAON"/></a></h1>
 		</div>
-	</div>
+	</div> -->
 	<!-- //header -->
 
 	
