--- a/khmoney/src/main/resources/templates/mywallet.html
+++ b/khmoney/src/main/resources/templates/mywallet.html
@@ -157,6 +157,7 @@
 </div>
 	 <th:block layout:fragment="asset">
 		 <script th:src="@{js/mywallet.js}"></script>
+		 <div lang="en" th:replace="fragments/popup_loan :: popup_wallet"></div>
 	 </th:block>
 </body>
 </html>
