--- a/khmoney/src/main/resources/templates/user.html
+++ b/khmoney/src/main/resources/templates/user.html
@@ -156,7 +156,7 @@
 	
 </div>
 	 <th:block layout:fragment="asset">
-	 <script th:src="@{js/mywallet.js}"></script>
+	 <script th:src="@{js/user.js}"></script>
 	 </th:block>
 </body>
 </html>
