--- a/khmoney/src/main/resources/templates/user.html
+++ b/khmoney/src/main/resources/templates/user.html
@@ -39,7 +39,7 @@
 				<!-- title_wrap -->
 				<div class="tit_wrap cboth">
 					<div class="t_center">
-						<div class="tit_h3"><h3>បញ្ចីសរុបទឹកប្រាក់</h3></div>
+						<div class="tit_h3"><h3>បញ្ចីបុគ្គលិក</h3></div>
 					</div>
 					<!-- <div class="f_right">
 						<div class="srch_wrap" style="background-image:none !important;">							
@@ -53,10 +53,6 @@
 				<!-- //title_wrap -->
 				<!-- title_wrap -->
 				<div class="tit_wrap cboth mgt10">
-					<div class="t_left" id="totalAmount">
-						<div class="tit_h4" style="padding-bottom:10px !important;"><h4>សរុបទឹកប្រាក់</h4> 
-						<h1 style="margin-left:80px;"><b>1,000,000 រៀល</b></h1></div>
-					</div>
 					<div class="right_box" style="bottom: 10px !important;top:auto !important;">
 						<a href="javascript:" class="btn_addnew" id="btn_addMore"><span class="blind">add new</span></a>
 					</div>
@@ -64,33 +60,33 @@
 				<!-- //title_wrap -->
 
 				<!-- table_list -->
-				<div class="tbl_lst1 mgt5" id="tbl_loan">
+				<div class="tbl_lst1 mgt5" id="tbl_user">
 					<table summary="">
 						<caption></caption>
 						<colgroup>
 						<col style="width:60px;">
 						<col style="width:60px;">
+						<col style="width:150px;">
 						<col style="width:120px;">
 						<col style="width:120px;">
+						<col style="width:150px;">
 						<col style="width:120px;">
+						<col>
 						<col style="width:100px;">
-						<col style="width:120px;">
 						<col style="width:100px;">
-						<col style="width:100px;">
-						<col >
 						</colgroup>
 						<thead>
 							<tr>
 								<th><div><input type="checkbox"></div></th>
 								<th><div>ល.រ</div></th>
-								<th><div>ប្រាក់ដើម</div></th>
-								<th><div>ចំនួទឹកប្រាក់</div></th>
-								<th><div>ប្រាក់សរុប</div></th>
-								<th><div>ប្រភេទទឹកប្រាក់</div></th>
-								<th><div>អ្នកទទួល</div></th>
-								<th><div>ថ្ងៃខែទទួល</div></th>
-								<th><div>អ្នកស្នើរសុំ</div></th>
-								<th><div>ពិពណ៍នា</div></th>
+								<th><div>ឈ្មោះបគ្គុលិក</div></th>
+								<th><div>ភេទ</div></th>
+								<th><div>លេខទូរសព័្ទ</div></th>
+								<th><div>អ៊ីមែល</div></th>
+								<th><div>សិទ្ធិ</div></th>
+								<th><div>អាស័យដ្ឋាន</div></th>
+								<th><div>សណ្ដានភាព</div></th>
+								<th><div></div></th>
 							</tr>
 						</thead>
 						<tfoot style="display:none;">
