--- a/khmoney/src/main/resources/templates/fragments/employeeAdd.html
+++ b/khmoney/src/main/resources/templates/fragments/employeeAdd.html
@@ -20,15 +20,15 @@
 				<table summary="">
 					<caption></caption>
 					<colgroup>
-					<col style="width:100px;">
+					<col style="width:150px;">
 					<col>
-					<col style="width:100px;">
+					<col>
 					<col>
 					</colgroup>
 					<tbody>
 						<tr>
 							<th><div>ឈ្មោះបុគ្គលិក</div></th>
-							<td colspan="3"><div><input type="text" value="" name="" id="emp_name" placeholder=""></div></td>
+							<td colspan="3"><div><input type="text" value="" name="" id="emp_name" placeholder="" required="required"></div></td>
 						</tr>					
 						<tr>
 							<th><div>ភេទ</div></th>
@@ -41,20 +41,21 @@
 						</tr>
 						<tr style="display:;" id="">
 							<th><div>លេខទូរស័ព្ទ</div></th>
-							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_phone"></div></td>
+							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_phone" required="required"></div></td>
 						</tr>
 						<tr style="display:;" id="">
 							<th><div>អ៊ីមែល</div></th>
-							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_email"></div></td>
+							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_email" required="required"></div></td>
 						</tr>
 						<tr style="display:;" id="">
 							<th><div>អាស័យដ្ឋាន</div></th>
-							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_address"></div></td>
+							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_address" required="required"></div></td>
 						</tr>
 						<tr style="display:;" id="">
 							<th><div>រូបថត</div></th>
 							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_photo">
 								<img alt="photo" th:src="@{/img/images/employee.png}">
+								<input type="file" name="file" placeholder=""​​ id="file">
 							</div></td>
 						</tr>
 					</tbody>
@@ -65,26 +66,26 @@
 					<table summary="">
 						<caption></caption>
 						<colgroup>
-						<col style="width:100px;">
+						<col style="width:150px;">
 						<col>
-						<col style="width:100px;">
+						<col>
 						<col>
 					</colgroup>
 						<tbody>
 							<tr>
 								<th><div>ឈ្មោះសំរាប់ចូលប្រើប្រព័ន្ធ</div></th>
-								<td colspan="3"><div><input type="text" value="" name="loan_code" id="loan_code" placeholder="" ></div></td>
+								<td colspan="3"><div><input type="text" value="" name="user_name" id="user_name" placeholder="" required="required"></div></td>
 								
 							</tr>
 							<tr>
 								<th><div>ពាក្យសំងាត់</div></th>
-								<td colspan="3"><div><input type="text" value="" name="time" id="time_txt" placeholder="" ></div></td>
+								<td colspan="3"><div><input type="text" value="" name="password" id="password" placeholder="" required="required"></div></td>
 								
 							</tr>
 							<tr>
 								<th><div>បញ្ជាក់ពាក្យសម្ងាត់</div></th>
 								<td colspan="3"><div>
-									<input type="text" value="" name="time" id="time_txt" placeholder="" >
+									<input type="text" value="" name="confirm_password" id="confirm_password" placeholder="" required="required">
 								</div></td>
 							</tr>
 		
@@ -92,38 +93,10 @@
 					</table>
 				</div>
 				<!-- //table input dot -->
-				<!-- table input dot -->
-				<div class="tbl_input_pop">
-					<table summary="">
-						<caption></caption>
-						<colgroup>
-						<col style="width:100px;">
-						<col>
-						<col style="width:100px;">
-						<col>
-						</colgroup>
-						<tbody>
-							<tr>
-								<th><div>ឈ្មោះសំរាប់ចូលប្រើប្រព័ន្ធ</div></th>
-								<td colspan="3">
-									<div>
-										<select style="width:;" name="permission" id="permission">
-											<option value="0">CO</option>
-											<option value="1">អ្នកប្រើប្រាស់</option>
-											<option value="2">ប្រធាន</option>
-										</select>
-									</div>
-								</td>
-								
-							</tr>
-
-						</tbody>
-					</table>
-				</div>
-				<!-- //table input dot -->
+				
 		</div>
 		<div class="t_line">
-			<a href="javascript:" class="btn_confirm" id="btn_wallet">បន្ថែម</a>
+			<a href="javascript:" class="btn_confirm" id="btn_save">បន្ថែម</a>
 			<a href="javascript:" class="btn_cancel">បោះបង់</a>
 		</div>
 	</div>	
