--- a/khmoney/src/main/resources/templates/fragments/employeeAdd.html
+++ b/khmoney/src/main/resources/templates/fragments/employeeAdd.html
@@ -53,8 +53,8 @@
 						</tr>
 						<tr style="display:;" id="">
 							<th><div>រូបថត</div></th>
-							<td colspan="3"><div><input type="text" value="" name="" placeholder=""​​ id="emp_photo">
-								<img alt="photo" th:src="@{/img/images/employee.png}">
+							<td colspan="3"><div>
+								 <img alt="photo" th:src="@{/img/images/employee.png}"> 
 								<input type="file" name="file" placeholder=""​​ id="file">
 							</div></td>
 						</tr>
